Latest version is always on GitHub at ICRAR/ProFit. Noted which version is on CRAN.

v1.0  First released on CRAN & GitHub

v1.0.1  Released on GitHub

FEATURE: You can now directly specify the region to use for fitting in profitSetupData (before it always used a combination of segim and mask, which it will use if this is not provided). Old code will work as before. Argument order has changed to accommodate.

CHANGE: profitRemakeModelList -> profitRemakeModellist (to be more consistent with how modellist is named throughout ProFit).

FEATURE: profitRemakeModellist can now take Data as an input for simplicity.

FIXED: Solaris issue with gauss.cpp.

FIXED: profitMakePlots so the region is shown correctly.

v1.0.2 Released on CRAN (latest) & GitHub

CHANGE: Minor internal naming changes.

FIXED: Occassional issue with profitMakePlots failing for certain region over-plots.

FIXED:  Intervals now work properly with the PSF model.

v1.0.3 GitHub only

FEATURE: GPU support via OpenCL (see vignettes).

FEATURE: OpenMP support (see vignettes).

Some minor mixes.

v1.0.4 GitHub only (latest)

FEATURE: A large number of utility functions added to aid in creating inputs for profitSetupData. In particular profitMakeSegim and profitMakeSegimExpand (for segmenting an image and making a segim map, this requires EBImage to be installed), profitSkyEst (for estimating the sky), profitGainEst (for estimating the gain), profitMakeSigma (for making a sigma map), and profitImBlur / profitImGrad / profitImDiff for transforming images. Also profitSkyEstLoc (local sky) and profitMakeSkyMap (coarse sky map generator).

FEATURE: profitDeprojectImageEllipse for circularising galaxies.

FIXED: profitMakeGaussianPSF had a mistake with the fwhm parameter (the radius it created was x2 too big). This was reported by Sarah Casura

TO DO:

FFTW integration within libprofit